pickup/delivery at the beginning

--- a/app/scripts/delivery/templates/delivery-option.html
+++ b/app/scripts/delivery/templates/delivery-option.html
@@ -1,4 +1,4 @@
-<ion-view title="Metodo de Entrega">
+<ion-view title="Metodo de Entrega" hide-back-button="true">
 
     <ion-content class="has-header">
         <delivery></delivery>
