--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -19,6 +19,9 @@
         <ion-item nav-clear menu-close href="#/app/stores">
           Locales
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/delivery">
+            Metodo de Entrega
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/menu/pizza">
           Pizzas
         </ion-item>
