--- a/app/scripts/promotion/templates/details.html
+++ b/app/scripts/promotion/templates/details.html
@@ -29,7 +29,7 @@
 
       <div class="item item-body">
 
-        <pizzas bindonce data-ng-model="promotion.components.PIZZA" data-nodetails="true"></pizzas>
+        <pizzas bindonce data-ng-model="promotion.components.PIZZA" data-nodetails="true" validationrules="isPromoValid"></pizzas>
         <empanadas bindonce data-ng-model="promotion.components.EMPANADA" data-nodetails="true" validationrules="isPromoValid"></empanadas>
         <bebidas bindonce data-ng-model="promotion.components.BEBIDA" data-nodetails="true" validationrules="isPromoValid"></bebidas>
 
