--- a/app/scripts/review/templates/review.html
+++ b/app/scripts/review/templates/review.html
@@ -3,10 +3,10 @@
 <ion-list bindonce="order">
     <ion-item class="item-divider">Productos</ion-item>
     <ion-item data-ng-repeat="product in order.products track by $index">
-        <span data-bo-bind="product.qty"></span>: <span data-bo-bind="product.description()"></span>
+        <span data-bo-bind="product.qty"></span>: <span data-bo-bind="product.getDescription()"></span>
       <div data-ng-if="product.cat == 'PROMO'">
         <div bindonce data-ng-repeat="item in product.items track by $index">
-          <span data-bo-bind="item.qty"></span> - <span data-bo-bind="item.desc"></span>
+          <span data-bo-bind="item.qty"></span> - <span data-bo-bind="item.description"></span>
         </div>
       </div>
     </ion-item>
