PROMO - Validation - more tests

--- a/app/scripts/empanada/templates/menu-empanadas.html
+++ b/app/scripts/empanada/templates/menu-empanadas.html
@@ -31,6 +31,7 @@
   <ion-list data-ng-repeat-end>
     <ion-item bindonce data-ng-repeat="product in cat.products">
       <h3 data-bo-bind="product.description"></h3>
+      <span data-bo-bind="product.toppings"></span>
       <qty ng-model="product" style="font: 0.5em;" data-disableaddbutton="isPromoValid[cat.ruleId].success"></qty>
     </ion-item>
   </ion-list>
