--- a/app/scripts/promotion/templates/details.html
+++ b/app/scripts/promotion/templates/details.html
@@ -10,7 +10,7 @@
 
       <div class="item item-avatar" data-ng-show="!isSelectionValid.success" style="background-color:#008800">
 
-        Debe seleccionar {{isSelectionValid.details[0].rule.qty}} {{isSelectionValid.details[0].rule.cat}}
+        Debe seleccionar {{isSelectionValid.details[0].rule.qty}} {{isSelectionValid.details[0].rule.properties.cat}}
         <br/>
         Te falta {{ isSelectionValid.details[0].rule.qty - isSelectionValid.details[0].qty }}
 
@@ -21,10 +21,6 @@
         {{ promotion.details.description.long }}
         <br/>
         {{ promotion.details.price | centsToMoney | currency }}
-
-        <pre>
-        TODOS: {{isSelectionValid | json }}
-        </pre>
       </div>
 
       <div class="item item-body">
