STORES: Add hours

--- a/app/scripts/store/templates/stores.html
+++ b/app/scripts/store/templates/stores.html
@@ -8,6 +8,10 @@
                 <strong>{{store.name}}</strong><br>
                 {{ store.address }}<br>
                 {{ store.tel }}
+
+                <div data-ng-repeat="dayHours in store.hours">
+                  {{ dayHours.day }}: {{dayHours.hours}}
+                </div>
             </ion-item>
         </ion-list>
 
