--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -19,3 +19,6 @@ form input + i.icon.error
 form input + i.icon.success
   margin-right: 8px
   color: #3d8b3d
+
+.todayHours
+  background-color: red;
