--- a/app/scripts/cart/templates/cart.html
+++ b/app/scripts/cart/templates/cart.html
@@ -49,5 +49,10 @@
   </ion-list>
 
   <button class="button button-block button-positive"
-          data-ng-if="cart.products.length > 0"
+          data-ng-disabled="!orderEligibility.success"
           data-ng-click="checkout()">Realizar Pedido</button>
+  <div data-ng-show="!orderEligibility.success">
+    Aun no puede completar la orden por...
+    </br>
+    {{orderEligibility.reason}}
+  </div>
